<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        layout="@layout/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>


    <Button
        android:id="@+id/buttonBoissons"
        android:layout_width="410dp"
        android:layout_height="70dp"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/txt_boissons" />

    <Button
        android:id="@+id/buttonFromages"
        android:layout_width="410dp"
        android:layout_height="70dp"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/txt_fromages" />

    <Button
        android:id="@+id/buttonSurgelés"
        android:layout_width="410dp"
        android:layout_height="70dp"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/txt_surgeles" />

    <Button
        android:id="@+id/buttonSauces"
        android:layout_width="410dp"
        android:layout_height="70dp"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/txt_sauces" />

    <View
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.6"/>

</LinearLayout>